# Rag_implemetation

./: .gitignore  README.md  config.json  logging_config.py  main.py  pyproject.toml  requirements.txt  test_main.py
Data_ingestion/: Vector_db.py  load_data.py
Retriver/: retrive.py
data/: .file_tracker.json  hagrid copy 2.txt
data/vector_store/: chroma.sqlite3
data/vector_store/c87c1c4b-dc85-4ab9-9205-be12a1e72e06/: index_metadata.pickle
docs/: FLOW_DOCUMENTATION.md
notebook/: Rag_pipeline.ipynb
notebooks/: document_strcture.ipynb
src/rag_app/ingestion/: load_data.py  vector_db.py
src/rag_app/retriever/: retrieve.py
tests/: test_main.py
