[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.3.0",
    "ipynb>=0.5.1",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.27.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.2",
]
